2012-05-14  Araki Ken  <arakiken@users.sf.net>

	* README: Updated

	* libind/*.c: u_int -> unsigned int

	* MLTermPty.java: A bug which disabled loading libMLTermPty.so in mlterm.jar
	  is fixed.

	* ml_vt100_parser.c: FF(0x0c) is processed.

	* configure.in, main/Makefile.in, libctl/Makefile.in, mlclient/Makefile.in,
	  xwindow/Makefile.in, libtype/Makefile.in: Minor fixes.

	* libctl/ml_shape_bidi.c: Minor fixes.

	* x_draw_str.c: Minor fixes.

2012-05-12  Araki Ken  <arakiken@users.sf.net>

	* README, mlterm.spec: Minor fixes.

	* README.ja, doc/en/PROTOCOL, man/mlterm.1: Updated.

	* x_draw_str.[ch], x_screen.[ch], x_screen_manager.[ch],
	  x_main_config.[ch], vte.c, x_im_{candidate|status}_screen.c:
	  "hide_underline" option is added.

	* ml_vt100_parser.c: It is possible to process sequences whose length
	  is more than PTY_RD_BUFFER_SIZE.

	* x_draw_str.c: Minor fixes.

	* version.h.in: 3.1.1 post => 3.1.2 pre

2012-05-10  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in, kik_pty_helper.c, ml_config_menu.c, x_imagelib.c:
	  SF Patch #3524577 and #3524578 is merged.
	  (Thanks to Ahmed El-Mahmoudy)

	* etc/key: Updated.

2012-05-07  Araki Ken  <arakiken@users.sf.net>

	* ml_pty_ssh.c: Command string to be executed over ssh connection is
	  braced by "" if it contains a space.

	* x_screen_manager.c: A problem which failed to open a new screen because
	  command string to be executed over ssh connection wasn't initialized
	  is fixed.

2012-05-06  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.[ch], ml_term.[ch], ml_term_manager.c, ml_vt100_parser.c,
	  ml_pty_intern.h, x_screen.c, x_screen_manager.c:
	  Experimental implementation of multiple windows per one pty
	  (MULTI_WINDOWS_PER_PTY) is removed.

2012-05-06  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c, x_im.c: Hack to avoid calling ibus_init() more than once
	  is added. (If ibus daemon was not found last time and ibus_init() is
	  called again, segfault happens.)
