@@ -5,6 +5,9 @@
 #ifndef  USE_TYPE_CAIRO
 #define  USE_TYPE_CAIRO
 #endif
+#ifdef  USE_TYPE_XFT
+#undef  USE_TYPE_XFT
+#endif
 
 #include  "x_font_ft.c"
 
